# mlir-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
book/: Chapter-01-Introduction.md  Chapter-02-Dynamic-Shapes.md  Chapter-03-Compilation-Infrastructure.md  Chapter-04-Bufferization.md  Chapter-05-Vector-Operations.md  Chapter-06-Softmax.md  Chapter-07-Neural-Operations.md  Chapter-08-Custom-Dialects-CPP.md  Chapter-09-TableGen-Dialect.md  Chapter-10-Optimizations.md  Chapter-11-Attention.md  Chapter-12-Transformer.md  Chapter-13-GPT-Part1.md  Chapter-13-GPT-Part2.md  Chapter-13-GPT.md  Chapter-14-Production-Optimizations.md  Chapter-15-GPU-Concepts.md  Chapter-16-Production-Serving-Part1.md  Chapter-16-Production-Serving-Part2.md  Chapter-16-Production-Serving-Part3.md  Chapter-16-Production-Serving.md
ch.1.Fixed-size/: CMakeLists.txt  EXECUTION_ENGINE.md  MLIR_CODING_PATTERN.md  README.md  test_jit.py
ch.1.Fixed-size/src/: bindings.cpp  ir.cpp  jit.cpp  lowering.cpp
ch.10.Optimizations/: CMakeLists.txt  README.md  test_jit.py
ch.10.Optimizations/src/: bindings.cpp
ch.11.Attention/: CMakeLists.txt  README.md  test_attention.py  test_jit.py
ch.11.Attention/inc/: TransformerDialect.h  TransformerDialect.td  TransformerOps.h  TransformerOps.td  TransformerToStandard.h
ch.11.Attention/src/: TransformerDialect.cpp  TransformerOps.cpp  TransformerToStandard.cpp  bindings.cpp
ch.12.Transformer/: CMakeLists.txt  README.md  test.py  test_jit.py
ch.12.Transformer/inc/: TransformerDialect.td  TransformerOps.td
ch.12.Transformer/src/: TransformerOps.cpp  TransformerPasses.cpp  bindings.cpp
ch.13.GPT/: CMakeLists.txt  README.md  generate.py  generation.py  test.py  test_ffn_ch13.py
ch.13.GPT/inc/: TransformerOps.td
ch.13.GPT/src/: TransformerPasses.cpp  bindings.cpp
ch.14.GPT-Optimized/: CMakeLists.txt  OPTIMIZATION_TUTORIAL.md  PLAN.md  README.md  SEARCH_QUESTION.md  TUTORIAL.md  benchmark.py  demo.py  generation.py  test.py  test_all.py  test_ffn.py  test_kv_cache.py  test_phase2.py
ch.14.GPT-Optimized/inc/: TransformDialectOptimization.h  TransformerDialect.h  TransformerOps.h  TransformerOps.td  TransformerPasses.h
ch.14.GPT-Optimized/src/: TransformDialectOptimization.cpp  TransformDialectOptimization.h  TransformerDialect.cpp  TransformerPasses.cpp  bindings.cpp  kv_cache.cpp  kv_cache.h
ch.14.GPT-Optimized/transforms/: optimize.mlir
ch.15.GPU-Concepts/: CMakeLists.txt  README.md  TUTORIAL.md  test_all.py  test_gpu.py
ch.15.GPU-Concepts/src/: attention.cpp  bindings.cpp  common.cpp  common.h  elementwise.cpp  gpu_kernels.cpp  layernorm.cpp  main.cpp  matmul.cpp  softmax.cpp  transformer.cpp  transpose.cpp  vector_add.cpp
ch.16.Nano-Serving/: CMakeLists.txt  README.md  TUTORIAL.md  demo.py  test_all.py  test_kv_caching.py
ch.16.Nano-Serving/python/: __init__.py  batch.py  chunked_prefill.py  chunked_request.py  continuous_batcher.py  cpp_modules.py  decode_manager.py  executor.py  kv_pool.py  nano_engine.py  prefill_manager.py  radix_cache.py  radix_manager.py  radix_node.py  request.py  request_pool.py  sampling.py
ch.16.Nano-Serving/src/: bindings.cpp  kv_cache.cpp  kv_cache.h  radix_cache.cpp  radix_cache.h
ch.2.Dynamic-size/: CMakeLists.txt  IMPROVEMENT_ROADMAP.md  README.md  test_jit.py
ch.2.Dynamic-size/src/: bindings.cpp  jit.cpp
ch.3.JIT-caching/: CMakeLists.txt  test_jit.py
ch.3.JIT-caching/src/: bindings.cpp  ir.cpp  jit.cpp  lowering.cpp
ch.4.Tensor-bufferization/: BUFFERIZATION_GUIDE.md  CMakeLists.txt  README.md  test_jit.py
ch.4.Tensor-bufferization/src/: bindings.cpp  ir.cpp  jit.cpp  lowering.cpp
ch.5.Vector-ops/: CMakeLists.txt  README.md  test_jit.py
ch.5.Vector-ops/src/: bindings.cpp  ir.cpp  jit.cpp  lowering.cpp
ch.6.Softmax/: CMakeLists.txt  README.md  test_jit.py
ch.6.Softmax/src/: bindings.cpp  ir.cpp  jit.cpp  lowering.cpp
ch.7.Neural-ops/: CMakeLists.txt  MEMREF_CONVENTION.md  README.md  test_generic.py  test_jit.py
ch.7.Neural-ops/src/: api.h  bindings.cpp  graph.h  ir.cpp  jit.cpp  lowering.cpp
ch.8.Custom-dialect/: CMakeLists.txt  GENERIC_BINDINGS.md  README.md  test_generic.py  test_jit.py
ch.8.Custom-dialect/python/: graph_builder.py  lowering.py
ch.8.Custom-dialect/src/: bindings.cpp  compiler.cpp
ch.9.TableGen-dialect/: CLEANUP_SUMMARY.md  CMakeLists.txt  README.md  TUTORIAL.md  test.py  test_jit.py
ch.9.TableGen-dialect/inc/: NNDialect.h  NNDialect.td  NNOps.h  NNOps.td
ch.9.TableGen-dialect/include/NN/: NNDialect.h  NNDialect.td  NNOps.h  NNOps.td  NNToStandard.h
ch.9.TableGen-dialect/lib/Conversion/: NNToStandard.cpp
ch.9.TableGen-dialect/lib/NN/: NNDialect.cpp  NNOps.cpp
ch.9.TableGen-dialect/python/: bindings.cpp
ch.9.TableGen-dialect/src/: NNDialect.cpp  NNOps.cpp  NNToStandard.cpp  bindings.cpp
